# task_tracker

./: .env.example  .gitignore  README.md  compose.yml  env.example  railway.toml
app/: Dockerfile  main.py  pyproject.toml  pytest.ini
app/alembic/: env.py
app/alembic/versions/: ab1877d0746b_initial_migration.py
app/core/: config.py  dependencies.py  redis.py  security.py
app/endpoints/: api.py  auth.py  tasks.py  user.py
app/models/: __init__.py  base.py  task.py  user.py
app/repositories/: task_repository.py  user_repository.py
app/schemas/: task.py  user.py
app/services/: auth_service.py  task_service.py  user_service.py
app/tests/: conftest.py  test_auth.py
streamlit/: Dockerfile  requirements.txt  streamlit_app.py
